# lighthouse

./: Cargo.toml  Cross.toml  Dockerfile  Dockerfile.reproducible  Makefile  wordlist.txt
.github/: CODEOWNERS
.github/workflows/: book.yml  local-testnet.yml  release.yml  test-suite.yml
account_manager/: Cargo.toml
account_manager/src/validator/: create.rs  exit.rs  recover.rs  slashing_protection.rs
account_manager/src/wallet/: mod.rs
beacon_node/: Cargo.toml
beacon_node/beacon_chain/: Cargo.toml
beacon_node/beacon_chain/benches/: benches.rs
beacon_node/beacon_chain/src/: attestation_rewards.rs  attestation_verification.rs  attester_cache.rs  beacon_block_reward.rs  beacon_block_streamer.rs  beacon_chain.rs  beacon_fork_choice_store.rs  beacon_proposer_cache.rs  bellatrix_readiness.rs  lib.rs  (+37 more)
beacon_node/beacon_processor/: Cargo.toml
beacon_node/client/: Cargo.toml
beacon_node/eth1/: Cargo.toml
beacon_node/execution_layer/: Cargo.toml
beacon_node/genesis/: Cargo.toml
beacon_node/genesis/src/: eth1_genesis_service.rs
beacon_node/genesis/tests/: tests.rs
beacon_node/http_api/: Cargo.toml
beacon_node/http_metrics/: Cargo.toml
beacon_node/lighthouse_network/: Cargo.toml
beacon_node/network/: Cargo.toml
beacon_node/operation_pool/: Cargo.toml
beacon_node/src/: cli.rs  config.rs  lib.rs
beacon_node/store/: Cargo.toml
beacon_node/tests/: test.rs
beacon_node/timer/: Cargo.toml
book/: .markdownlint.yml
book/src/: SUMMARY.md  advanced.md  advanced_blobs.md  advanced_builders.md  advanced_checkpoint_sync.md  advanced_database.md  advanced_database_migrations.md  advanced_datadir.md  advanced_networking.md  advanced_proposer_only.md  advanced_redundancy.md  advanced_release_candidates.md  advanced_slasher.md  advanced_web3signer.md  api.md  api_lighthouse.md  api_metrics.md  api_vc.md  api_vc_auth_header.md  api_vc_endpoints.md  archived-key-management.md  archived-merge-migration.md  archived.md  archived_key_management.md  archived_pi.md  contributing.md  developers_architecture.md  faq.md  help_bn.md  help_general.md  help_vc.md  help_vm.md  help_vm_create.md  help_vm_import.md  help_vm_move.md  installation.md  installation_cross_compiling.md  installation_docker.md  installation_source.md  intro.md  (+20 more)
boot_node/: Cargo.toml
boot_node/src/: lib.rs  server.rs
common/account_utils/: Cargo.toml
common/deposit_contract/: Cargo.toml
common/eth2/: Cargo.toml
common/eth2_network_config/: Cargo.toml
common/filesystem/: Cargo.toml
common/health_metrics/: Cargo.toml
common/lighthouse_version/: Cargo.toml
common/logging/: Cargo.toml
common/logging/src/: lib.rs  sse_logging_components.rs  tracing_libp2p_discv5_logging_layer.rs  tracing_logging_layer.rs  utils.rs
common/malloc_utils/: Cargo.toml
common/monitoring_api/: Cargo.toml
common/task_executor/: Cargo.toml
common/validator_dir/: Cargo.toml
common/warp_utils/: Cargo.toml
common/workspace_members/: Cargo.toml
consensus/context_deserialize/: Cargo.toml
consensus/fork_choice/: Cargo.toml
consensus/merkle_proof/: Cargo.toml
consensus/state_processing/: Cargo.toml
consensus/swap_or_not_shuffle/: Cargo.toml
consensus/types/: Cargo.toml
consensus/types/presets/gnosis/: deneb.yaml  fulu.yaml
consensus/types/src/: aggregate_and_proof.rs  attestation.rs  attestation_data.rs  attester_slashing.rs  beacon_block.rs  beacon_block_body.rs  beacon_block_header.rs  beacon_response.rs  beacon_state.rs  blob_sidecar.rs  bls_to_execution_change.rs  builder_bid.rs  chain_spec.rs  checkpoint.rs  consolidation_request.rs  contribution_and_proof.rs  custody.rs  data_column_custody_group.rs  data_column_sidecar.rs  data_column_subnet_id.rs  deposit.rs  deposit_data.rs  deposit_message.rs  deposit_request.rs  eth1_data.rs  eth_spec.rs  execution_block_hash.rs  execution_payload.rs  execution_payload_header.rs  execution_requests.rs  fork.rs  fork_data.rs  fork_name.rs  historical_batch.rs  historical_summary.rs  inclusion_list.rs  inclusion_list_duty.rs  indexed_attestation.rs  lib.rs  light_client_bootstrap.rs  (+33 more)
consensus/types/src/beacon_state/: inclusion_list_cache.rs
consensus/types/src/test_utils/: generate_deterministic_keypairs.rs
consensus/types/src/test_utils/test_random/: bitfield.rs
crypto/bls/: Cargo.toml
crypto/kzg/: Cargo.toml
crypto/kzg/src/: lib.rs
database_manager/: Cargo.toml
database_manager/src/: cli.rs  lib.rs
lcli/: Cargo.toml  Dockerfile
lcli/src/: block_root.rs  http_sync.rs  main.rs  mock_el.rs  skip_slots.rs  state_root.rs  transition_blocks.rs
lighthouse/: Cargo.toml
lighthouse/environment/: Cargo.toml
lighthouse/environment/src/: lib.rs  tracing_common.rs
lighthouse/environment/tests/testnet_dir/: config.yaml
lighthouse/src/: main.rs  metrics.rs
lighthouse/tests/: beacon_node.rs  validator_client.rs
scripts/local_testnet/: README.md  network_params.yaml  network_params_das.yaml  start_local_testnet.sh
scripts/tests/: doppelganger_protection.sh
slasher/: Cargo.toml
slasher/service/: Cargo.toml
slasher/src/: database.rs  slasher.rs
testing/ef_tests/: Makefile  check_all_files_accessed.py
testing/execution_engine_integration/: Cargo.toml
testing/simulator/: Cargo.toml
testing/state_transition_vectors/: Cargo.toml
testing/validator_test_rig/: Cargo.toml
testing/web3signer_tests/: Cargo.toml
validator_client/: Cargo.toml
validator_client/beacon_node_fallback/: Cargo.toml
validator_client/doppelganger_service/: Cargo.toml
validator_client/graffiti_file/: Cargo.toml
validator_client/http_api/: Cargo.toml
validator_client/http_metrics/: Cargo.toml
validator_client/http_metrics/src/: lib.rs
validator_client/initialized_validators/: Cargo.toml
validator_client/lighthouse_validator_store/: Cargo.toml
validator_client/slashing_protection/: Cargo.toml
validator_client/src/: cli.rs  config.rs  latency.rs  lib.rs  notifier.rs
validator_client/validator_services/: Cargo.toml
validator_client/validator_store/: Cargo.toml
validator_manager/src/: create_validators.rs  move_validators.rs
(+306 files in other folders)
