[package]
name = "kzg"
version = "0.1.0"
authors = ["Pawan Dhananjay <pawandhananjay@gmail.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = { workspace = true }
c-kzg = { workspace = true }
# Required to maintain the pin from https://github.com/sigp/lighthouse/pull/6608
crate_crypto_internal_eth_kzg_bls12_381 = { workspace = true }
crate_crypto_internal_eth_kzg_erasure_codes = { workspace = true }
crate_crypto_internal_eth_kzg_maybe_rayon = { workspace = true }
crate_crypto_internal_eth_kzg_polynomial = { workspace = true }
crate_crypto_kzg_multi_open_fk20 = { workspace = true }
derivative = { workspace = true }
ethereum_hashing = { workspace = true }
ethereum_serde_utils = { workspace = true }
ethereum_ssz = { workspace = true }
ethereum_ssz_derive = { workspace = true }
hex = { workspace = true }
rust_eth_kzg = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tree_hash = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "benchmark"
harness = false
